RESOLVED FIXED27220
Assertion failure in createSearcher() (usearch_open() status is U_USING_DEFAULT_WARNING)
https://bugs.webkit.org/show_bug.cgi?id=27220
Summary Assertion failure in createSearcher() (usearch_open() status is U_USING_DEFAU...
mitz
Reported 2009-07-13 09:42:13 PDT
After <http://trac.webkit.org/changeset/45762>, when I attempt a “find in page” operation, I hit an assertion failure in createSearcher(), because the status code from usearch_open() is U_USING_DEFAULT_WARNING. currentSearchLocaleID() is "en". The first entry in my AppleLanguages user defualt is "en".
Attachments
mitz
Comment 1 2009-07-13 09:43:48 PDT
U_USING_DEFAULT_WARNING means that the result came from the root locale. Perhaps the "en" locale does not override anything in the root locale in the version of ICU that I have.
Darin Adler
Comment 2 2009-07-13 10:41:15 PDT
The assertion should be changed to allow U_USING_DEFAULT_WARNING as well as U_ZERO_ERROR and U_USING_FALLBACK_WARNING.
Darin Adler
Comment 3 2009-07-13 17:39:06 PDT
Note You need to log in before you can comment on or make changes to this bug.