2009-07-13  Darin Adler  <darin@apple.com>

Reviewed by Oliver Hunt.

        https://bugs.webkit.org/show_bug.cgi?id=27220
        Assertion failure in createSearcher() (usearch_open() status is U_USING_DEFAULT_WARNING)

        * editing/TextIterator.cpp:
        (WebCore::createSearcher): Add U_USING_DEFAULT_WARNING as a possible status code
        in the assertion. Affects only the assertion.



Canonical link: https://commits.webkit.org/37483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45849 268f45cc-cd09-0410-ab3c-d52691b4dbfc